--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,6 @@
   "editor.tabSize": 2,
   "editor.useTabStops": true,
   "emmet.triggerExpansionOnTab": true,
-  "files.autoSave": "afterDelay",
+  "files.autoSave": "off",
   "terminal.integrated.fontSize": 18
 }
