Add coffee blog section and update navigation
Introduced a new 'Coffee blog' section with supporting pages and images, updated the Quarto configuration to include new navigation links for 'Data blog' and 'Coffee blog', and adjusted the navbar layout. Also added new coffee review posts and updated site output directory to 'docs'.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,17 +1,22 @@
 project:
   type: website
+  output-dir: docs
 
 website:
-  description: "A blog built with Quarto"
-  site-url: https://your-website-url.example.com # you must change this appropriately for RSS feeds to work properly
   title: "blog to follow my learnings"
+  draft-mode: unlinked
   navbar:
+    left:
+      - text: "Data blog"
+        icon: pie-chart-fill
+        href: data-blog.qmd
     right:
+      - text: "Coffee blog"
+        icon: cup-hot-fill
+        href: coffee-blog.qmd
       - about.qmd
       - icon: github
         href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
 format:
   html:
     theme:
