Update blog title and remove coffee reviews listings
Added a period to the blog title for consistency. Removed coffee review items from the listings and updated related HTML and JSON files to reflect the change. Also revised descriptive text in the Coffee Blog page.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "blog to follow my learnings"
+  title: "blog to follow my learnings."
   draft-mode: unlinked
   navbar:
     left:
