--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,16 +3,19 @@ project:
   output-dir: docs
 
 website:
-  title: "blog to follow my learnings."
+  title: "Fresh Slate Lab"
   draft-mode: unlinked
   navbar:
     left:
+      - text: "Projects"
+        icon: file-earmark-binary-fill
+        href: projects.qmd
       - text: "Data blog"
         icon: pie-chart-fill
         href: data-blog.qmd
     right:
-      - text: "Coffee blog"
-        icon: cup-hot-fill
+      - text: "Wire"
+        icon: newsletter
         href: coffee-blog.qmd
       - about.qmd
       - icon: github
@@ -21,7 +24,7 @@ format:
   html:
     theme:
       - cosmo
-      - brand
+      - bootswatch
     css: styles.css
 
 
