--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
     right:
       - text: "Wire"
         icon: newsletter
-        href: coffee-blog.qmd
+        href: wire.qmd
       - about.qmd
       - icon: github
         href: https://github.com/
