Add Math & Stats section and update navigation
Introduced a new 'Math & Stats' section with corresponding navigation links in the Quarto config and site HTML. Added initial content for the section, including a historical roadmap post. Updated project listings, blog categories, and GitHub profile link. Also included a use-case flow diagram in the coffee blog and added a new project under 'Projects'.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,9 @@ website:
       - text: "Projects"
         icon: file-earmark-binary-fill
         href: projects.qmd
+      - text: "Math & Stats"
+        icon: calculator-fill
+        href: math&stat.qmd
       - text: "Data blog"
         icon: pie-chart-fill
         href: data-blog.qmd
@@ -17,9 +20,8 @@ website:
       - text: "Wire"
         icon: newsletter
         href: wire.qmd
-      - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/ashwinbijur/
 format:
   html:
     theme:
